--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -26,21 +26,24 @@
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#006666", GradientType=1);
     }
 }
+
 /*
 Typography 
-*/
 @import url('https://fonts.googleapis.com/css?family=Calistoga|Open+Sans&display=swap');
+@import url('https://fonts.google.com/specimen/Roboto?query=roboto');
+*/
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:wght@100;300;900&display=swap');
 h1,
 h2,
 h3 {
-    font-family: 'Calistoga';
+    font-family: 'roboto';
     margin-bottom: 10px;
     color: #FFFFFF;
 }
 p,
 a,
 span {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'roboto', sans-serif;
     font-weight: 400;
 }
 @media(max-width: 767px) {
@@ -96,7 +99,7 @@ Hero
 }
 @media(min-width: 1024px) {
     .hero-body {
-        background-image: url('../src/assets/img/gym.svg');
+        background-image: url('./img/logo.png');
         background-size: 30%;
         background-position: 80% 50%;
         background-repeat: no-repeat;
